filled in code for all model classes, filled in code for country dao

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#datasource connection properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/country_survey_DB
+spring.datasource.name=country_survey_DB
+spring.datasource.username=postgres
+spring.datasource.password=postgres1
 
+server.port=9000
